# Scout

./: .env.example  .gitignore  Dockerfile  langgraph.json  pyproject.toml
app/: config.py  demo.py  graph.py  tools.py
app/demo/: demo_run.py
app/output/: amount_earned_by_type_over_time.json  transactions_over_time.json
sample_data/: response.txt
tests/: tools.py
tests/output/: transactions_over_time.json
