[project]
name = "scout"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.3.13",
    "langchain-google-genai>=4.2.7",
    "langgraph>=1.2.9",
    "langgraph-api>=0.11.0",
    "langgraph-cli>=0.4.31",
    "pandas>=3.0.3",
    "plotly>=6.9.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "sqlalchemy>=2.0.51",
]
